--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -9,7 +9,8 @@
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
-.drivers_top_Route {}
+
+/* .drivers_top_Route {} */
 
 .wrapper {
     position: relative;
@@ -27,7 +28,7 @@
 }
 
 .drivers_bottom_background {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 
