--- a/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
@@ -9,7 +9,7 @@
     margin: 0 10px;
     padding: 0 2px;
     display: flex;
-    transition: all 0.3s;
+    /* transition: all 0.3s; */
 }
 
 .sortMenu_element span {
