--- a/src/components/home/text.css
+++ b/src/components/home/text.css
@@ -1,24 +1,24 @@
 .text_firstLine {
     text-align: center;
-    font-size: 34.5pt;
+    font-size: 37px;
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
     min-height: 40px;
     margin-top: 81px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-top: 20px;
-    background: rgba(48, 66, 105, 0.8);
+    background: rgba(48, 66, 105, 0.9);
     border-radius: 5px 5px 0 0;
 }
 
 .text_secondLine {
-    font-size: 13.5pt;
+    font-size: 16px;
     text-align: center;
     font-weight: 400;
     color: #fff;
-    padding-bottom: 46px;
-    background: rgba(48, 66, 105, 0.8);
+    padding-bottom: 20px;
+    background: rgba(48, 66, 105, 0.9);
 }
 
 
