--- a/src/index.css
+++ b/src/index.css
@@ -97,20 +97,161 @@ body {
     padding-left: 0px !important;
 }
 
+.pl-1,
+.px-1 {
+    padding-left: .25rem!important;
+}
+
+.pl-2,
+.px-2 {
+    padding-left: .5rem!important;
+}
+
+.pl-3,
+.px-3 {
+    padding-left: 1rem!important;
+}
+
 .pr-0 {
     padding-right: 0px !important;
 }
 
-.pb-0 {
-    padding-bottom: 0px !important;
+.pr-1,
+.px-1 {
+    padding-right: .25rem!important;
+}
+
+.pr-2,
+.px-2 {
+    padding-right: .5rem!important;
+}
+
+.pr-5,
+.px-5 {
+    padding-right: 3rem!important;
 }
 
 .pt-0 {
     padding-top: 0px !important;
 }
 
+.pt-2,
+.py-2 {
+    padding-top: .5rem!important;
+}
+
+.pt-3,
+.py-3 {
+    padding-top: 1rem!important;
+}
+
+.p-1 {
+    padding: .25rem!important;
+}
+
 .p-2 {
     padding: .5rem!important;
+}
+
+.pb-0 {
+    padding-bottom: 0px !important;
+}
+
+.pb-1,
+.py-1 {
+    padding-bottom: .25rem!important;
+}
+
+.pb-3 {
+    padding-bottom: 1rem!important;
+}
+
+.pb-4,
+.py-4 {
+    padding-bottom: 1.5rem!important;
+}
+
+.p-4 {
+    padding: 1.5rem!important;
+}
+
+.mb-0,
+.my-0 {
+    margin-bottom: 0!important;
+}
+
+.mb-1,
+.my-1 {
+    margin-bottom: .25rem!important;
+}
+
+.mb-2,
+.my-2 {
+    margin-bottom: .5rem!important;
+}
+
+.mb-3,
+.my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.mb-4,
+.my-4 {
+    margin-bottom: 1.5rem!important;
+}
+
+.mb-5,
+.my-5 {
+    margin-bottom: 3rem!important;
+}
+
+.m-0 {
+    margin: 0!important;
+}
+
+.ml-2,
+.mx-2 {
+    margin-left: .5rem!important;
+}
+
+.mr-2,
+.mx-2 {
+    margin-right: .5rem!important;
+}
+
+.ml-1,
+.mx-1 {
+    margin-left: .25rem!important;
+}
+
+.ml-3,
+.mx-3 {
+    margin-left: 1rem!important;
+}
+
+.mt-1,
+.my-1 {
+    margin-top: .25rem!important;
+}
+
+.mt-2,
+.my-2 {
+    margin-top: .5rem!important;
+}
+
+.mt-3,
+.my-3 {
+    margin-top: 1rem!important;
+}
+
+.mt-4,
+.my-4 {
+    margin-top: 1.5rem!important;
+}
+
+.mt-5,
+.my-5 {
+    margin-top: 3rem!important;
 }
 
 @media (min-width: 1200px) {
