--- a/src/components/driverProfile/DriverAdaptedRoute.css
+++ b/src/components/driverProfile/DriverAdaptedRoute.css
@@ -2,8 +2,7 @@
     justify-content: center;
     align-items: flex-start;
     background-color: rgba(48, 66, 105, 0.8);
-    margin-top: 35px;
-    padding: 20px 20px 0 20px;
+    padding: 20px !important;
     border-radius: 5px;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
     max-width: 1200px;
@@ -70,13 +69,14 @@
 .driverAdaptedBt {
     background-color: #ff6600;
     border-radius: 5px;
-    height: 40px;
+    height: 41px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    margin: 0 15px;
-    padding: 0 20px;
+    margin: 2px;
+    /* padding: 0 20px; */
+    width: 100%;
 }
 
 .driverAdaptedBt span {
