--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -87,6 +87,7 @@
 
 .photoCarouselClass {
     position: relative;
+    transition: all 0.3s;
     transition-duration: 330ms;
     transition-property: transform, width;
     transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
