--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -14,7 +14,7 @@
     margin-bottom: 20px;
 }
 
-.driverInfo_photo {
+.driverInfo_photo img {
     width: 156px;
     height: 156px;
     border-radius: 50%;
@@ -91,10 +91,11 @@
     background: url('../drivers/DriversBody/DriversBlock/pictures/bookmark_orange.svg');
 }
 
-.driversInfo_driverName {
-    /* line-height: 18px;
-    padding-bottom: 10px; */
-}
+
+/* .driversInfo_driverName {
+     line-height: 18px;
+    padding-bottom: 10px; 
+}  */
 
 .driverInfo_informationIcon {
     position: inherit;
