--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -10,7 +10,7 @@
 }
 
 .block_element_infoBlock_name {
-    font-size: 18pt;
+    font-size: 24px;
     font-weight: 500;
     text-align: left;
     color: #304269;
