--- a/src/components/driverProfile/Carousel.css
+++ b/src/components/driverProfile/Carousel.css
@@ -36,11 +36,13 @@
     display: flex;
     padding-bottom: 5px;
     scroll-behavior: smooth;
+    max-height: 80px;
 }
 
 .carouselChoiceHorizontal div {
     flex-basis: 200px;
     min-width: 100px;
+    max-width: 120px;
     flex-grow: 1;
 }
 
