--- a/src/components/driverProfile/DriverAdaptedRoute.css
+++ b/src/components/driverProfile/DriverAdaptedRoute.css
@@ -1,10 +1,7 @@
 .drivers_route {
-    justify-content: center;
-    align-items: flex-start;
-    background-color: rgba(48, 66, 105, 0.8);
+    background-color: #fff;
     padding: 20px !important;
-    border-radius: 5px;
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 0 0 5px 5px;
     max-width: 1200px;
 }
 
