--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -12,7 +12,14 @@
     font-size: 16px;
     line-height: 16px;
     font-weight: 500;
+    /*height: 32px;*/
+    min-height: 16px;
+    max-height: 32px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     color: #304269;
+    margin-bottom: 10px;
+    margin-top: 12px;
 }
 
 .placesList_picture {
@@ -24,9 +31,13 @@
 .placesList_info {
     display: flex;
     flex-direction: column;
-    width: 680px;
-    height: 215px;
-    padding: 20px;
+    width: 100%;
+    height: 170px;
+    padding: 10px;
+}
+
+.placesList_stars{
+    margin-bottom: 15px;
 }
 
 .placesList_info_row {
@@ -38,21 +49,39 @@
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
-    height: 80px;
+    min-height: 40px;
+    height: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #304269;
+    color: #686868;
 }
 
 .placesList_info_position {
-    font-size: 12px;
+    
     font-weight: 400;
-    color: #686868;
+    color: #304269;
+    overflow: 'hidden';
+    text-overflow: 'ellipsis';
+}
+
+.placesList_info_position_tags{
+    font-size: 12px;
+    height: 24px;
+    min-height: 24px;
+    line-height: 12px;
+}
+
+.placesList_info_position_loc{
+    font-size: 14px;
+    height: 28px;
+    min-height: 28px;
+    line-height: 14px;
 }
 
 .placesList_info_position_textStyle {
     margin-left: 5px;
-    line-height: 20px;
+    line-height: 12px;
+    width: 90%;
 }
 
 .placesList_readMoreButton {
