--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -3,6 +3,7 @@
     border-bottom: 1px solid #cccccc;
     font-size: 16px;
     font-weight: 600;
+    padding: 0 10px;
 }
 
 .driverProfileComments_panel_element {
