--- a/src/components/home/FirstEnterModal.css
+++ b/src/components/home/FirstEnterModal.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
 }
+
 .modalStartInformation_logo {
     width: 100px;
     height: 40px;
@@ -18,6 +19,7 @@
     background-size: 100% 100%;
     margin-right: auto;
 }
+
 .modalStartInformationSkip {
     cursor: pointer;
     font-size: 14px;
@@ -54,9 +56,16 @@
 .modalStartInformationContent {
     position: relative;
     height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100vw;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}
+
+.modalStartInformationContent div {
+    scroll-snap-align: center;
+    min-width: 100vw;
 }
 
 .iconRout {
