--- a/src/components/home/FirstEnterModal.css
+++ b/src/components/home/FirstEnterModal.css
@@ -55,12 +55,49 @@
 
 .modalStartInformationContent {
     position: relative;
-    height: 85%;
-    width: 100vw;
+    height: 75%;
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     overflow-y: hidden;
     scroll-behavior: smooth;
+}
+
+.modalStartInformationContentText span {
+    color: #304269;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.modalStartInformationContentText p {
+    color: #686868;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.buttonChenge {
+    height: 5%;
+}
+
+.buttonChenge span {
+    cursor: pointer;
+    margin: 0 5px;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #686868;
+    border-radius: 50%;
+    transition: all 0.3s;
+    background: transparent;
+}
+
+.buttonChenge span.activeBtChenge {
+    background: #304269;
+    transition: all 0.3s;
+}
+
+.modalStartInformationContent::-webkit-scrollbar {
+    display: none !important;
 }
 
 .modalStartInformationContent div {
@@ -68,39 +105,17 @@
     min-width: 100vw;
 }
 
-.iconRout {
-    width: 100px;
-    height: 100px;
-    background: url(./img/route.svg) no-repeat;
-    background-size: 100px 100px;
+.iconImg {
+    width: 280px;
+    height: 250px;
+    background-size: 100% 100%!important;
+    object-fit: cover !important;
+    background-repeat: no-repeat !important;
     margin-bottom: 20px;
 }
 
-.iconCalendar {
-    width: 100px;
-    height: 100px;
-    background: url(./img/calendarHome.svg) no-repeat;
-    background-size: 100px 100px;
-    margin-bottom: 20px;
-}
 
-.iconOffer {
-    width: 100px;
-    height: 100px;
-    background: url(./img/offer.svg) no-repeat;
-    background-size: 100px 100px;
-    margin-bottom: 20px;
-}
-
-.iconEnjoy {
-    width: 150px;
-    height: 150px;
-    background: url(./img/enjoy_trip.svg) no-repeat;
-    background-size: 150px 150px;
-    margin-bottom: 20px;
-}
-
-.slider {
+/* .slider {
     height: 85%;
     overflow: hidden;
     position: relative;
@@ -203,7 +218,7 @@
     top: -1px;
     width: 10px;
     border-radius: 50%;
-}
+} */
 
 
 /* modalStartInformation End */
