--- a/src/components/home/FirstEnterModal.css
+++ b/src/components/home/FirstEnterModal.css
@@ -49,9 +49,10 @@
     padding: 10px 0px;
 }
 
-.modalStartInformationNext:hover {
+
+/* .modalStartInformationNext:hover {
     color: #f60;
-}
+} */
 
 .modalStartInformationContent {
     position: relative;
@@ -64,14 +65,15 @@
 
 .modalStartInformationContentText span {
     color: #304269;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 22px;
+    font-weight: 500;
     text-align: center;
+    padding-bottom: 5px;
 }
 
 .modalStartInformationContentText p {
     color: #686868;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 400;
     text-align: center;
 }
@@ -107,7 +109,7 @@
 
 .iconImg {
     width: 280px;
-    height: 250px;
+    height: 305px;
     background-size: 100% 100%!important;
     object-fit: cover !important;
     background-repeat: no-repeat !important;
