--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -13,12 +13,11 @@
     line-height: 16px;
     font-weight: 500;
     /*height: 32px;*/
-    min-height: 16px;
+    min-height: 32px;
     max-height: 32px;
     text-overflow: ellipsis;
     overflow: hidden;
     color: #304269;
-    margin-bottom: 10px;
     margin-top: 12px;
 }
 
@@ -32,7 +31,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 170px;
+    height: 160px;
     padding: 10px;
 }
 
@@ -80,7 +79,7 @@
 
 .placesList_info_position_textStyle {
     margin-left: 5px;
-    line-height: 12px;
+    line-height: 14px;
     width: 90%;
 }
 
@@ -100,4 +99,24 @@
     margin-left: auto;
     height: 25px;
     width: 20px;
+}
+
+.placesTagList_tagLine{
+    width: 90%;
+    text-overflow: ellipsis
+}
+
+.placesTagList_stateBlock{
+    margin: 5px;
+    padding: 5px;
+    text-decoration: underline
+}
+
+.placesTagList_tagBlock{
+    border: 2px solid #ff6600;
+    border-radius: 25px;
+    margin: 5px;
+    padding: 5px;
+    flex-basis: auto;
+    flex-grow: 0.1;
 }
