--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -129,7 +129,7 @@
 }
 
 .placesDescription_travelBlock_element {
-    width: 433px;
+    /*width: 433px;*/
     height: 70px;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     margin-bottom: 4px;
