--- a/src/components/UserProfile/UserProfileSettings.css
+++ b/src/components/UserProfile/UserProfileSettings.css
@@ -159,6 +159,12 @@ p.driverProfileSettingsContentPasswordText {
     .sittingsTextField input {
         margin-top: 13px !important;
     }
+    .driverProfileSettingsContentUnsubscribe p {
+        font-size: 14px;
+    }
+    .driverProfileSettingsContentUnsubscribe .driverProfileSettingsContentUnsubscribeButton {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 576px) {}
