--- a/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
+++ b/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
@@ -257,6 +257,26 @@
     }
 }
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+    .affiliateProgramInput {
+        align-items: center;
+        border: none;
+        border-radius: none;
+        max-height: none;
+    }
+    .affiliateProgramInput input {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        min-width: 250px;
+    }
+    .affiliateProgramInput spanlink {
+        border: 1px solid #f60;
+        border-radius: 5px;
+    }
+    .affiliateProgramIconsMass {
+        padding-top: 5px;
+        width: 100%;
+    }
+}
 
 @media (max-width: 576px) {}
