--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -36,15 +36,15 @@
     border-bottom: 3px solid #f60 !important;
 }
 
-.navigationBody .blockedSpan{
+.navigationBody .blockedSpan {
     color: gray;
-}
-.navigationBody .blockedSpan:hover{
-    color: gray;
-    border-bottom-style:none;
-    cursor: default;
 }
 
+.navigationBody .blockedSpan:hover {
+    color: gray;
+    border-bottom-style: none;
+    cursor: default;
+}
 
 .navigation3 {
     left: 50%;
@@ -187,7 +187,7 @@
     }
     .bodyTopDriverInfoName p {
         font-weight: 400;
-        font-size: 16px;
+        font-size: 18px;
     }
     .bodyTopDriverInfoPlace p {
         color: #666;
@@ -204,5 +204,8 @@
 @media (max-width: 576px) {
     .driverBG {
         background: none !important;
+    }
+    .bodyTopDriverInfoRideMobail p {
+        font-size: 12px;
     }
 }
