--- a/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
@@ -10,14 +10,14 @@
 }
 
 .classFormControl {
-    position: absolute !important;
-    top: 30px;
-    left: 0;
-    min-width: 150px;
-    max-width: max-content;
+    /* position: absolute !important; */
+    /* top: 30px;
+    left: 0; */
+    min-width: 165px !important;
+    max-width: 165px;
     border-radius: 5px;
     background-color: #828ca5;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    /* box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
     z-index: 30;
 }
 
@@ -33,6 +33,42 @@
 
 .MuiInput-underline:before {
     border-bottom: none !important;
+}
+
+.MuiSelect-icon {
+    color: #fff !important;
+}
+
+.MuiTypography-body1 {
+    font-size: 14px !important;
+}
+
+.MuiMenuItem-root {
+    padding-bottom: 0px !important;
+    padding-top: 0px !important;
+    min-height: 30px !important;
+}
+
+.MuiCheckbox-root {
+    color: #304269 !important;
+}
+
+.MuiListItem-button:hover,
+.MuiListItem-root.Mui-selected:hover {
+    background: rgba(255, 255, 255, 0.329) !important;
+}
+
+.MuiListItem-root.Mui-selected {
+    background: none !important;
+}
+
+.MuiMenuItem-gutters {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+.classFormControl .MuiSelect-selectMenu {
+    font-size: 14px;
 }
 
 .autoMenu_element {
@@ -71,6 +107,9 @@
     top: -2px;
     width: 20%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .autoMenu_element_text {
